--- a/psBackJoon/psBackJoon.vcxproj
+++ b/psBackJoon/psBackJoon.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="pg42628.cpp" />
+    <ClCompile Include="24060.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
