--- a/psBackJoon/psBackJoon.vcxproj.filters
+++ b/psBackJoon/psBackJoon.vcxproj.filters
@@ -7,7 +7,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="pg42628.cpp">
+    <ClCompile Include="24060.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
