--- a/psBackJoon/psBackJoon.vcxproj.filters
+++ b/psBackJoon/psBackJoon.vcxproj.filters
@@ -7,7 +7,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="9372.cpp">
+    <ClCompile Include="pg76502.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
