kakao blind 2018 news clustering

--- a/psBackJoon/psBackJoon.vcxproj
+++ b/psBackJoon/psBackJoon.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="pg1845.cpp" />
+    <ClCompile Include="kakao_blind_2018_17677.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
