--- a/psBackJoon/psBackJoon.vcxproj.filters
+++ b/psBackJoon/psBackJoon.vcxproj.filters
@@ -7,7 +7,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="RedBlackTree.cpp">
+    <ClCompile Include="1725.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
